--- a/less/brew/nav.less
+++ b/less/brew/nav.less
@@ -23,3 +23,17 @@ and more scalable.
 		width: 95px;
 	}
 }
+
+// Dropdown menus
+// Fix non-wrapping menu items
+.dropdown-menu {
+	line-height: 18px;
+	> li {
+		margin-bottom: 3px;
+	}
+	> li > a {
+		white-space: normal;
+		line-height: inherit;
+	}
+}
+
